--- a/DoAn_Androids/app/src/main/res/layout/fragmenthome.xml
+++ b/DoAn_Androids/app/src/main/res/layout/fragmenthome.xml
@@ -2,13 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
-    >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Đây là Home"
-        android:textColor="@color/white"
-        android:layout_centerInParent="true"
-        android:textSize="50sp"/>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".fragment.FragmentHome">
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/hello_blank_fragment"
+    android:textSize="30sp"/>
 </RelativeLayout>
