--- a/DoAn_Androids/app/src/main/res/layout/row_item.xml
+++ b/DoAn_Androids/app/src/main/res/layout/row_item.xml
@@ -1,20 +1,24 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center_vertical"
+    android:onClick="clickMenuItem"
     >
     <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:src="@drawable/ic_action_menu"
+        android:layout_margin="10dp"
         android:id="@+id/img_icon"/>
+
     <TextView
+        android:id="@+id/txt_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txt_name"
+        android:paddingLeft="20dp"
         android:text="Tên Item"
-        android:textSize="30sp"
-        android:paddingLeft="10dp"/>
+        android:layout_margin="10dp"
+        android:textSize="20sp" />
 
 </LinearLayout>
