--- a/DoAn_Androids/app/src/main/res/layout/fragment__sport.xml
+++ b/DoAn_Androids/app/src/main/res/layout/fragment__sport.xml
@@ -5,8 +5,11 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".fragmentMenu.Fragment_Sport">
-   <include
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       layout="@layout/activity_inclue_sport" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
