--- a/DoAn_Androids/app/src/main/res/layout/activity_main.xml
+++ b/DoAn_Androids/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <!--            Menu của Toolbar-->
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@color/teal_700"
+                android:src="@drawable/logobaos" />
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -25,9 +31,8 @@
                     android:id="@+id/toolbar"
                     android:layout_width="wrap_content"
                     android:layout_height="?attr/actionBarSize"
-                    android:background="@color/purple_500"
+                    android:background="@color/teal_200"
                     android:onClick="startMenu"
-
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -38,7 +43,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     app:queryHint="Search Here"
-                    android:background="@color/purple_500"
+                    android:background="@color/teal_200"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -67,7 +72,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/teal_700"
+                    android:background="@color/teal_200"
                     app:itemIconTint="@color/white"
                     app:itemIconSize="30sp"
                     app:itemTextColor="@color/bottom_color_nav"
