--- a/DoAn_Androids/app/src/main/res/values/colors.xml
+++ b/DoAn_Androids/app/src/main/res/values/colors.xml
@@ -6,8 +6,8 @@
     <color name="blue">#FF3700B3</color>
     <color name="red">#FFF41B0B</color>
     <color name="yellow">#FFF41B0B</color>
-    <color name="teal_200">#1ABF21</color>
-    <color name="teal_700">#226125</color>
+    <color name="teal_200">#BE25D8</color>
+    <color name="teal_700">#1C8E22</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_selected">#FFCFBD22</color>
