--- a/DoAn_Androids/app/src/main/res/layout/activity_login.xml
+++ b/DoAn_Androids/app/src/main/res/layout/activity_login.xml
@@ -57,7 +57,9 @@
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
             android:backgroundTint="@color/teal_200"
-            android:text="Đăng nhập" />
+            android:text="Đăng nhập"
+            android:onClick="dangNhap"/>
+
         <Button
             android:id="@+id/btn_sigUp"
             android:backgroundTint="@color/teal_200"
