--- a/DoAn_Androids/app/src/main/res/layout/activity_main.xml
+++ b/DoAn_Androids/app/src/main/res/layout/activity_main.xml
@@ -42,14 +42,14 @@
                     android:id="@+id/search_bar"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    app:queryHint="Search Here"
                     android:background="@color/teal_200"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toEndOf="@+id/toolbar"
                     app:layout_constraintTop_toTopOf="parent"
-                    />
+                    app:layout_constraintVertical_bias="0.0"
+                    app:queryHint="Search Here" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
