--- a/DoAn_Androids/app/src/main/res/layout/list_baiviet.xml
+++ b/DoAn_Androids/app/src/main/res/layout/list_baiviet.xml
@@ -5,26 +5,29 @@
     android:layout_margin="10dp"
     android:orientation="vertical"
     >
+
     <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="title"
         android:layout_margin="10dp"
-        android:id="@+id/title"
-        android:textSize="30sp" />
+        android:text="Title"
+        android:textSize="20sp"
+        android:textStyle="bold|italic" />
         <ImageView
             android:id="@+id/img_baiviet"
             android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:src="@drawable/logobaosss"/>
+            android:src="@drawable/logobaosss"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/content"
         android:text="Content"
         android:layout_margin="10dp"
-        android:textSize="30sp" />
+        android:textSize="15sp" />
 
 
 
