--- a/DoAn_Androids/app/src/main/res/layout/activity_main.xml
+++ b/DoAn_Androids/app/src/main/res/layout/activity_main.xml
@@ -72,10 +72,10 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_marginBottom="2dp"
-                    android:background="@color/teal_200"
+                    android:background="@color/black"
                     app:itemIconTint="@color/white"
                     app:itemIconSize="30sp"
-                    app:itemTextColor="@color/bottom_color_nav"
+                    app:itemTextColor="@color/white"
                     app:menu="@menu/mennubottomnav" />
             </RelativeLayout>
 
