--- a/DoAn_Androids/app/src/main/res/layout/fragment__xe.xml
+++ b/DoAn_Androids/app/src/main/res/layout/fragment__xe.xml
@@ -3,15 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="@color/teal_200"
+
     android:layout_height="match_parent"
     tools:context=".fragmentMenu.Fragment_Xe">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="xe"
-        android:layout_gravity="center"
-        android:layout_marginTop="300dp"
-        android:textSize="30sp"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </LinearLayout>
