--- a/DoAn_Androids/app/src/main/res/layout/list_baiviet.xml
+++ b/DoAn_Androids/app/src/main/res/layout/list_baiviet.xml
@@ -17,9 +17,8 @@
         <ImageView
             android:id="@+id/img_baiviet"
             android:layout_margin="10dp"
-            android:src="@drawable/logobaosss"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
             />
     <TextView
         android:layout_width="wrap_content"
@@ -27,7 +26,7 @@
         android:id="@+id/content"
         android:text="Content"
         android:layout_margin="10dp"
-        android:textSize="15sp" />
+        android:textSize="13sp" />
 
 
 
