--- a/DoAn_Androids/app/src/main/res/values/colors.xml
+++ b/DoAn_Androids/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_500">#0E8BED</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="blue">#FF3700B3</color>
     <color name="red">#FFF41B0B</color>
@@ -11,4 +11,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_selected">#FFCFBD22</color>
+    <color name="xam">#F1DEDE</color>
+    <color name="color">#BF2121</color>
 </resources>
