--- a/DoAn_Androids/app/src/main/res/layout/activity_main.xml
+++ b/DoAn_Androids/app/src/main/res/layout/activity_main.xml
@@ -19,37 +19,37 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@color/teal_700"
+                android:layout_height="30dp"
                 android:src="@drawable/logobaos" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
+                android:background="@color/teal_700"
                 android:layout_height="wrap_content">
 
                 <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="?attr/actionBarSize"
-                    android:background="@color/teal_200"
+                    android:background="@color/teal_700"
                     android:onClick="startMenu"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/search_Bar"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:navigationIcon="@drawable/ic_action_menu" />
                 <!--           search-->
-                <androidx.appcompat.widget.SearchView
-                    android:id="@+id/search_bar"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:background="@color/teal_200"
+                <ImageView
+                    android:id="@+id/search_Bar"
+                    android:layout_width="66dp"
+                    android:layout_height="39dp"
+                    android:layout_marginEnd="4dp"
+                    android:background="@color/teal_700"
+                    android:src="@drawable/search"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toEndOf="@+id/toolbar"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0"
-                    app:queryHint="Search Here" />
+                    app:layout_constraintVertical_bias="0.529" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -90,9 +90,13 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="80dp"
+                android:layout_height="80dp"
+                android:layout_marginTop="50dp"
                 android:text="Chuyên Mục"
+                android:textStyle="bold"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:background="@color/black"
                 android:textAlignment="center"
                 android:textSize="30dp" />
 
