--- a/DoAn_Androids/app/src/main/res/values/colors.xml
+++ b/DoAn_Androids/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="red">#FFF41B0B</color>
     <color name="yellow">#FFF41B0B</color>
     <color name="teal_200">#BE25D8</color>
-    <color name="teal_700">#1C8E22</color>
+    <color name="teal_700">#2ECA37</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_selected">#FFCFBD22</color>
