--- a/DoAn_Androids/app/src/main/res/layout/activity_main.xml
+++ b/DoAn_Androids/app/src/main/res/layout/activity_main.xml
@@ -52,10 +52,10 @@
                 <ImageView
                     android:id="@+id/search_Bar"
                     android:layout_width="66dp"
-                    android:layout_height="39dp"
+                    android:layout_height="40dp"
                     android:layout_marginEnd="4dp"
                     android:background="@color/teal_700"
-                    android:src="@drawable/search"
+                    android:src="@drawable/search2"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
