--- a/DoAn_Androids/app/src/main/res/layout/activity_phan_hoi_nguoi_dung.xml
+++ b/DoAn_Androids/app/src/main/res/layout/activity_phan_hoi_nguoi_dung.xml
@@ -3,10 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:weightSum="4"
+    android:background="@color/background"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Phản  hồi người dùng"
+        android:textSize="30sp"
+        android:background="@color/black"
+        android:gravity="center"
+        android:textColor="@color/white"
+        />
 
     <EditText
 
@@ -14,22 +24,23 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="20dp"
-        android:layout_weight="1"
-        android:background="@color/xam"
+        android:layout_weight="3"
+        android:background="@color/white"
         android:gravity="top"
         android:hint="Nội dung phản hồi."
-        android:inputType="textImeMultiLine"
+        android:inputType="textEmailAddress"
         android:maxLines="50"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/btnGui"
-        android:layout_width="wrap_content"
-        android:layout_height="10dp"
-        android:layout_marginLeft="150dp"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:backgroundTint="@color/black"
         android:layout_weight="0.25"
         android:text="Gửi"
-        android:textColor="@color/material_on_background_emphasis_high_type" />
+        android:textColor="@color/white" />
 
 
 </LinearLayout>
