--- a/DoAn_Androids/app/src/main/res/values/colors.xml
+++ b/DoAn_Androids/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="teal_200">#BE25D8</color>
     <color name="teal_700">#2ECA37</color>
     <color name="black">#FF000000</color>
+    <color name="background">#787070</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_selected">#FFCFBD22</color>
     <color name="xam">#F1DEDE</color>
