--- a/DoAn_Androids/app/src/main/res/layout/activity_detail_baiviet.xml
+++ b/DoAn_Androids/app/src/main/res/layout/activity_detail_baiviet.xml
@@ -42,6 +42,12 @@
         android:layout_marginTop="50dp"
         android:text="Bình luận" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_binh_luan"
+        android:layout_width="349dp"
+        android:layout_height="wrap_content"
+        android:background="@color/com_facebook_button_login_silver_background_color_pressed" />
+
     <EditText
         android:id="@+id/comment"
         android:layout_width="match_parent"
@@ -57,6 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
+        android:onClick="onGuiComment"
         android:text="Gửi" />
 </LinearLayout>
 </ScrollView>
