--- a/DoAn_Androids/app/src/main/res/layout/activity_sig_up.xml
+++ b/DoAn_Androids/app/src/main/res/layout/activity_sig_up.xml
@@ -67,6 +67,7 @@
             android:onClick="startSignUpSuccess"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Đăng ký" />
+            android:text="Đăng ký"
+            />
     </LinearLayout>
 </RelativeLayout>
