--- a/DoAn_Androids/app/src/main/res/layout/activity_main.xml
+++ b/DoAn_Androids/app/src/main/res/layout/activity_main.xml
@@ -79,12 +79,13 @@
                 <com.google.android.material.bottomnavigation.BottomNavigationView
                     android:id="@+id/bottom_nav"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="58dp"
+
                     android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="2dp"
+                    android:layout_marginBottom="0dp"
                     android:background="@color/black"
-                    app:itemIconTint="@color/white"
                     app:itemIconSize="30sp"
+                    app:itemIconTint="@color/white"
                     app:itemTextColor="@color/white"
                     app:menu="@menu/mennubottomnav" />
             </RelativeLayout>
