--- a/DoAn_Androids/app/src/main/res/layout/fragment_contain_home.xml
+++ b/DoAn_Androids/app/src/main/res/layout/fragment_contain_home.xml
@@ -17,7 +17,7 @@
         app:tabSelectedTextColor="@color/yellow"
         android:layout_height="wrap_content"/>
     <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPager"
+        android:id="@+id/viewPagers"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
